<resources>
    <string name="app_name">MAERA</string>
    <string name="app_name_long">Mensajes AERonáuticos Argentinos</string>
    <string name="get">Get</string>
    <string name="loading">Cargando&#8230;</string>
    <string name="METAR">METAR</string>
    <string name="category_metar">Metar</string>
    <string name="TAF">TAF</string>
    <string name="PRONAREA">PRONAREA</string>
    <string name="datos">Datos del aeródromo</string>
    <string name="FIR">FIR</string>
    <string name="OACI">OACI</string>
    <string name="ANAC">ANAC</string>

    <string name="name">Nombre</string>
    <string name="pronarea">Pronarea</string>
    <string name="aerodrom">METAR/TAF</string>
    <string name="location">Ubicación</string>
    <string name="tafAvailable">TAF</string>
    <string name="info">Información general</string>
    <string name="messages">Reportes meteorológicos</string>
    <string name="localCode">Código local</string>
    <string name="download">Descargar</string>
    <string name="search_hint">Buscar aeropuerto</string>
    <string name="showingFavs">Mostrando favoritos</string>
    <string name="showingEZE">Mostrando FIR Ezeiza</string>
    <string name="showingCBA">Mostrando FIR Córdoba</string>
    <string name="showingDOZ">Mostrando FIR Mendoza</string>
    <string name="showingSIS">Mostrando FIR Resistencia</string>
    <string name="showingCRV">Mostrando FIR Comodoro Rivadavia</string>

    <string name="noTAF">No emite TAF</string>

    <string name="tabLayout_ICAO">CÓDIGO\nOACI</string>
    <string name="tabLayout_Local">CÓDIGO\nNACIONAL</string>
    <string name="tabLayout_Location">UBICACIÓN</string>
    <string name="tabLayout_Name">NOMBRE</string>
    <string name="favourites">FAVORITOS</string>
    <string name="allAirports">Todos</string>
    <string name="refresh">Actualizar</string>
    <string name="sortBy">Ordenar por</string>
    <string name="separator">/</string>

    <string name="searchBy">Buscar por</string>
    <string name="searchByName">Nombre</string>
    <string name="searchByICAO">Identificador OACI</string>
    <string name="searchByLocal">Identificador ANAC</string>
    <string name="searchByLocation">Ubicación</string>
    <string name="searchByLocality">Localidad</string>
    <string name="searchByProvince">Provincia</string>
    <string name="searchByFir">FIR</string>
    <string name="searchByFavourites">Favoritos</string>
    <string name="code">Código</string>
    <string name="showOnly">Mostrar</string>
    <string name="favourite">favourite</string>
    <string name="EZE">EZE</string>
    <string name="DOZ">DOZ</string>
    <string name="CBA">CBA</string>
    <string name="SIS">SIS</string>
    <string name="CRV">CRV</string>
    <string name="ANT">ANT</string>
    <string name="EZE_long">FIR Ezeiza</string>
    <string name="CBA_long">FIR Córdoba</string>
    <string name="DOZ_long">FIR Mendoza</string>
    <string name="SIS_long">FIR Resistencia</string>
    <string name="CRV_long">FIR Comodoro Rivadavia</string>
    <string name="ANT_long">Antártida</string>
    <string name="search">Buscar</string>
    <string name="filter">Mostrar</string>
    <string name="about">Acerca de</string>
    <string name="dark_theme">Dark theme</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
