<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/selected"
        app:tabRippleColor="@color/unselected"
        app:tabSelectedTextColor="@color/selected"
        app:tabTextColor="@color/unselected">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/oaci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EZE" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/anac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CBA" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DOZ" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIS" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CRV" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ANT" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/result"
        style="@style/pronareaResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>