<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fadingEdgeLength="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIconTint="@color/colorAccent"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabInlineLabel="false"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextAppearance="@style/TabLayout"
        app:tabTextColor="@color/colorSecundaryText">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabICAO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabLayout_ICAO" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabLayout_Local" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabLayout_Location" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabLayout_Name" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/airports"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>