<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="false"
    android:focusable="true">


    <TextView
        android:id="@+id/searchBy"
        style="@style/searchBySecundaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/searchBy"
        app:layout_constraintBottom_toTopOf="@+id/icao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBy">

        <TextView
            style="@style/searchByText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bottomSheetStartPadding"
            android:layout_marginTop="@dimen/bottomSheetTitlePadding"
            android:layout_marginBottom="@dimen/bottomSheetTitlePadding"
            android:text="@string/searchByICAO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/anac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icao">

        <TextView
            style="@style/searchByText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bottomSheetStartPadding"
            android:layout_marginTop="@dimen/bottomSheetTitlePadding"
            android:layout_marginBottom="@dimen/bottomSheetTitlePadding"
            android:text="@string/searchByLocal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anac">

        <TextView
            style="@style/searchByText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bottomSheetStartPadding"
            android:layout_marginTop="@dimen/bottomSheetTitlePadding"
            android:layout_marginBottom="@dimen/bottomSheetTitlePadding"
            android:text="@string/searchByName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <TextView
            style="@style/searchByText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bottomSheetStartPadding"
            android:layout_marginTop="@dimen/bottomSheetTitlePadding"
            android:layout_marginBottom="@dimen/bottomSheetTitlePadding"
            android:text="@string/searchByLocality"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/province"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locality">

        <TextView
            style="@style/searchByText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bottomSheetStartPadding"
            android:layout_marginTop="@dimen/bottomSheetTitlePadding"
            android:layout_marginBottom="@dimen/bottomSheetTitlePadding"
            android:text="@string/searchByProvince"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>