<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginBottom="8dp"
    android:paddingBottom="8dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="72dp">

        <ToggleButton
            android:id="@+id/favourite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_favourite"
            android:checked="false"
            android:contentDescription="@string/favourite"
            android:textOff=""
            android:textOn=""
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location"
            style="@style/layout_airport_body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Córdoba, Córdoba"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/name"
            style="@style/layout_airport_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Aeropuerto Ingeniero Ambrosio Taravella"
            app:layout_constraintEnd_toStartOf="@+id/codes"
            app:layout_constraintStart_toEndOf="@+id/favourite"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/codes"
            style="@style/layout_airport_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="SACO/CBA"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/metar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/METAR"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/taf"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fir" />

        <Button
            android:id="@+id/taf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TAF"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/metar"
            app:layout_constraintTop_toTopOf="@+id/metar" />

        <TextView
            android:id="@+id/fir"
            style="@style/layout_airport_body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/codes"
            app:layout_constraintTop_toBottomOf="@+id/codes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>